crates/pina_macros/tests/ui/fail/discriminator_invalid_primitive.rs
use pina::*;

#[discriminator(primitive = u128)]
pub enum BadPrimitiveDiscriminator {
	Value = 0,
}

fn main() {}
