crates/pina_macros/tests/ui/fail/discriminator_invalid_primitive.stderr
error: Unsupported primitive type. Must be one of: `u8`, `u16`, `u32`, `u64`.
 --> tests/ui/fail/discriminator_invalid_primitive.rs:3:29
  |
3 | #[discriminator(primitive = u128)]
  |                             ^^^^
